<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center" >
    
    <Button
        android:id="@+home/market_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/market_button" />
    
    <Button
        android:id="@+home/decks_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/decks_button" />
    
    <Button
        android:id="@+home/cards_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cards_button" />
    
</LinearLayout>
